@@ -1,4 +1,6 @@
 0.50: (in development)
+    + Mentions tab
+    + Different badge colors for unread tweets/mentions
 
 0.49:
     * Again, fixing favicons
